# kytos_orchestration

./: README.md
.github/workflows/: deploy-backend.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml  test.py
backend/src/: models.py  scaling.py  solver.py
frontend/: nuxt.config.ts  package-lock.json  package.json  wrangler.jsonc
frontend/app/assets/scss/: _base.scss  _reset.scss  _variables.scss  main.scss
frontend/app/components/kytos/: Node.vue  Progress.vue
frontend/app/components/landing/: KatexMath.vue  LandingContent.vue  LandingHero.vue  LandingIllustration.vue  LandingSection.vue  Tompedia.vue
frontend/app/composables/: useNodeStats.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue
frontend/app/pages/demo/: index.vue
frontend/app/types/: index.d.ts
